GUI with password encoding